Clean up PCEPTunnelClusterSingletonService
Access BundleContext only once and perform general cleanups.

Change-Id: Ib9c1bb1ef6e04a2d2a94d0b9dff483a380043a5d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>